esp32h2 (RMT): Align names with other chips

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -156,3 +156,34 @@ UART*:
         name: SCLK_EN
       RX_RST_CORE:
         name: RST_CORE
+
+RMT:
+  _modify:
+    TX_CH%sCONF0:
+      name: CH%s_TX_CONF0
+  CH%s_TX_CONF0:
+    _strip_end: "_CH0"
+  CH%s_TX_LIM:
+    _strip_end: "_CH0"
+  SYS_CONF:
+    _strip: "RMT_"
+  INT_RAW:
+    _modify:
+      TX_CH0_ERR_INT_RAW:
+        name: CH0_TX_ERR_INT_RAW
+      TX_CH1_ERR_INT_RAW:
+        name: CH1_TX_ERR_INT_RAW
+      TX_CH2_ERR_INT_RAW:
+        name: CH2_TX_ERR_INT_RAW
+      TX_CH3_ERR_INT_RAW:
+        name: CH3_TX_ERR_INT_RAW
+  INT_CLR:
+    _modify:
+      RX_CH0_ERR_INT_CLR:
+        name: CH0_TX_ERR_INT_CLR
+      RX_CH1_ERR_INT_CLR:
+        name: CH1_TX_ERR_INT_CLR
+      RX_CH2_ERR_INT_CLR:
+        name: CH0_RX_ERR_INT_CLR
+      RX_CH3_ERR_INT_CLR:
+        name: CH1_RX_ERR_INT_CLR
