chore: point at post-merge-queue commit

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -16,4 +16,4 @@ svdtools   = "0.3.0"
 toml       = "0.7.3"
 
 [patch.crates-io]
-svd2rust = { git = "https://github.com/rustbox/svd2rust.git", rev = "328d0c37e21379cbcbf4952bad52793ee78be97f" }
+svd2rust = { git = "https://github.com/rust-embedded/svd2rust.git", rev = "e6a6d150e480808b870a33a9032d25e3343bb656" }
