--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -187,3 +187,14 @@ RMT:
         name: CH0_RX_ERR_INT_CLR
       RX_CH3_ERR_INT_CLR:
         name: CH1_RX_ERR_INT_CLR
+
+LEDC:
+  "*":
+    _strip_end: "_CH"
+  "TIMER%s_CONF":
+    _strip: "TIMER_"
+    _modify:
+      TICK_SEL_TIMER:
+        name: TICK_SEL
+      CLK_DIV_TIMER:
+        name: CLK_DIV
