--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -3,6 +3,41 @@ _svd: "../esp32h2.base.svd"
 _modify:
   GDMA:
     name: DMA
+  ASSIST_DEBUG:
+    baseAddress: 0x600C2000
+
+ASSIST_DEBUG:
+  _modify:
+    C0RE_0_INTR_ENA:
+      name: CORE_0_MONTR_ENA
+    CORE_0_INTR_RLS:
+      name: CORE_0_INTR_ENA
+  CORE_0_INTR_ENA:
+    _modify:
+      CORE_0_AREA_DRAM0_0_RD_RLS:
+        name: CORE_0_AREA_DRAM0_0_RD_INTR_ENA
+      CORE_0_AREA_DRAM0_0_WR_RLS:
+        name: CORE_0_AREA_DRAM0_0_WR_INTR_ENA
+      CORE_0_AREA_DRAM0_1_RD_RLS:
+        name: CORE_0_AREA_DRAM0_1_RD_INTR_ENA
+      CORE_0_AREA_DRAM0_1_WR_RLS:
+        name: CORE_0_AREA_DRAM0_1_WR_INTR_ENA
+      CORE_0_AREA_PIF_0_RD_RLS:
+        name: CORE_0_AREA_PIF_0_RD_INTR_ENA
+      CORE_0_AREA_PIF_0_WR_RLS:
+        name: CORE_0_AREA_PIF_0_WR_INTR_ENA
+      CORE_0_AREA_PIF_1_RD_RLS:
+        name: CORE_0_AREA_PIF_1_RD_INTR_ENA
+      CORE_0_AREA_PIF_1_WR_RLS:
+        name: CORE_0_AREA_PIF_1_WR_INTR_ENA
+      CORE_0_SP_SPILL_MIN_RLS:
+        name: CORE_0_SP_SPILL_MIN_INTR_ENA
+      CORE_0_SP_SPILL_MAX_RLS:
+        name: CORE_0_SP_SPILL_MAX_INTR_ENA
+      CORE_0_IRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_0_IRAM0_EXCEPTION_MONITOR_INTR_ENA
+      CORE_0_DRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_0_DRAM0_EXCEPTION_MONITOR_INTR_ENA
 
 DMA:
   "IN_INT_ST_CH%s":
