feat: ✨ Align PCR field names

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -157,6 +157,10 @@ PCNT:
       PULSE_CNT_RST_U3:
         name: CNT_RST_U3
 
+PCR:
+  RMT_SCLK_CONF:
+    _strip: "RMT_"
+
 SPI2:
   _strip: "SPI_"
 
