--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -1,1 +1,16 @@
 _svd: ../esp32c3.base.svd
+
+SYSTEM:
+  _modify:
+    EDMA_CTRL:
+      description: edma clock and reset register
+EFUSE:
+  _modify:
+    WR_TIM_CONF1:
+      description: Configuration register 1 of eFuse programming timing parameters.
+    WR_TIM_CONF2:
+      description: Configuration register 2 of eFuse programming timing parameters.
+    CLK:
+      description: eFuse clock configuration register.
+    CONF:
+      description: eFuse operation mode configuration register.
