Patch pacs so that c3,h2,c6,s3 have the same usj interrupt name

--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -14,3 +14,9 @@ EFUSE:
       description: eFuse clock configuration register.
     CONF:
       description: eFuse operation mode configuration register.
+
+USB_DEVICE:
+  _modify:
+    _interrupts:
+      USB_SERIAL_JTAG:
+        name: USB_DEVICE
