Patch the ESP32-C6 LP core's `LP_UART` peripheral

--- a/esp32c6-lp/svd/patches/esp32c6-lp.yaml
+++ b/esp32c6-lp/svd/patches/esp32c6-lp.yaml
@@ -37,3 +37,9 @@ LP_IO:
     _strip: "LP_GPIO0_"
   PIN0:
     _strip: "LP_GPIO0_"
+
+LP_UART:
+  FIFO:
+    _modify:
+      RXFIFO_RD_BYTE:
+        access: read-write
