--- a/esp32/Cargo.toml
+++ b/esp32/Cargo.toml
@@ -29,6 +29,7 @@ test = false
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
+defmt = { version = "=0.3.5", optional = true }
 vcell = "0.1.3"
 xtensa-lx = "0.8.0"
 
@@ -36,3 +37,4 @@ xtensa-lx = "0.8.0"
 default = ["xtensa-lx/esp32"]
 rt = []
 impl-register-debug = []
+defmt = ["dep:defmt"]
