--- a/esp32h2/Cargo.toml
+++ b/esp32h2/Cargo.toml
@@ -29,9 +29,11 @@ test = false
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
+defmt = { version = "=0.3.5", optional = true }
 vcell = "0.1.3"
 
 [features]
 default = []
 rt = []
 impl-register-debug = []
+defmt = ["dep:defmt"]
