--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -1,1 +1,28 @@
 _svd: ../esp32c2.base.svd
+
+ECC:
+  _modify:
+    "K_MEM*":
+      dim: 8
+      dimIncrement: 0x4
+    "PX_MEM*":
+      dim: 8
+      dimIncrement: 0x4
+    "PY_MEM*":
+      dim: 8
+      dimIncrement: 0x4
+
+SHA:
+  _modify:
+    "H_MEM*":
+      dim: 16
+      dimIncrement: 0x4
+    "M_MEM*":
+      dim: 16
+      dimIncrement: 0x4
+
+XTS_AES:
+  _modify:
+    "PLAIN_MEM*":
+      dim: 4
+      dimIncrement: 0x4
