Fix size of registers in memory regions

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -12,12 +12,16 @@ RSA:
     "M_MEM*":
       dim: 32
       dimIncrement: 0x4
+      size: 0x20
     "Z_MEM*":
       dim: 32
       dimIncrement: 0x4
+      size: 0x20
     "Y_MEM*":
       dim: 32
       dimIncrement: 0x4
+      size: 0x20
     "X_MEM*":
       dim: 32
       dimIncrement: 0x4
+      size: 0x20
