--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -5,24 +5,30 @@ ECC:
     "K_MEM*":
       dim: 8
       dimIncrement: 0x4
+      size: 0x20
     "PX_MEM*":
       dim: 8
       dimIncrement: 0x4
+      size: 0x20
     "PY_MEM*":
       dim: 8
       dimIncrement: 0x4
+      size: 0x20
 
 SHA:
   _modify:
     "H_MEM*":
       dim: 16
       dimIncrement: 0x4
+      size: 0x20
     "M_MEM*":
       dim: 16
       dimIncrement: 0x4
+      size: 0x20
 
 XTS_AES:
   _modify:
     "PLAIN_MEM*":
       dim: 4
       dimIncrement: 0x4
+      size: 0x20
