--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -5,15 +5,19 @@ AES:
     "IV_MEM*":
       dim: 4
       dimIncrement: 0x4
+      size: 0x20
     "H_MEM*":
       dim: 4
       dimIncrement: 0x4
+      size: 0x20
     "J0_MEM*":
       dim: 4
       dimIncrement: 0x4
+      size: 0x20
     "T0_MEM*":
       dim: 4
       dimIncrement: 0x4
+      size: 0x20
 
     KEY_%s:
       name: "KEY[%s]"
@@ -25,42 +29,53 @@ DS:
     "C_MEM*":
       dim: 396
       dimIncrement: 0x4
+      size: 0x20
     "X_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
     "Z_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
 
 HMAC:
   _modify:
     "WR_MESSAGE_MEM*":
       dim: 16
       dimIncrement: 0x4
+      size: 0x20
     "RD_RESULT_MEM*":
       dim: 8
       dimIncrement: 0x4
+      size: 0x20
 
 RSA:
   _modify:
     "M_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
     "Z_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
     "Y_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
     "X_MEM*":
       dim: 128
       dimIncrement: 0x4
+      size: 0x20
 
 SHA:
   _modify:
     "H_MEM*":
       dim: 16
       dimIncrement: 0x4
+      size: 0x20
     "M_MEM*":
       dim: 16
       dimIncrement: 0x4
+      size: 0x20
