Fix patch for ESP32-S2

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -4,8 +4,10 @@ AES:
   _modify:
     KEY_%s:
       name: "KEY[%s]"
-    TEXT_%s:
-      name: "TEXT[%s]"
+    TEXT_IN_%s:
+      name: "TEXT_IN[%s]"
+    TEXT_OUT_%s:
+      name: "TEXT_OUT[%s]"
 
 DS:
   _modify:
