--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -21,8 +21,10 @@ AES:
 
     KEY_%s:
       name: "KEY[%s]"
-    TEXT_%s:
-      name: "TEXT[%s]"
+    TEXT_IN_%s:
+      name: "TEXT_IN[%s]"
+    TEXT_OUT_%s:
+      name: "TEXT_OUT[%s]"
 
 DS:
   _modify:
