--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -1,5 +1,22 @@
 _svd: ../esp32c2.base.svd
 
+DMA:
+  _array:
+    "OUT_CONF0_CH*": {}
+    "OUT_CONF1_CH*": {}
+    "OUT_PRI_CH*": {}
+    "INT_CLR_CH*": {}
+    "OUT_LINK_CH*": {}
+    "INT_RAW_CH*": {}
+    "OUT_PERI_SEL_CH*": {}
+    "INT_ENA_CH*": {}
+    "OUT_EOF_DES_ADDR_CH*": {}
+    "IN_CONF0_CH*": {}
+    "IN_PRI_CH*": {}
+    "IN_LINK_CH*": {}
+    "IN_PERI_SEL_CH*": {}
+    "IN_DSCR_BF0_CH*": {}
+
 ECC:
   _modify:
     "K_MEM*":
