--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -19,6 +19,23 @@ AES:
       dimIncrement: 0x4
       size: 0x20
 
+DMA:
+  _array:
+    "OUT_CONF0_CH*": {}
+    "OUT_CONF1_CH*": {}
+    "OUT_PRI_CH*": {}
+    "INT_CLR_CH*": {}
+    "OUT_LINK_CH*": {}
+    "INT_RAW_CH*": {}
+    "OUT_PERI_SEL_CH*": {}
+    "INT_ENA_CH*": {}
+    "OUT_EOF_DES_ADDR_CH*": {}
+    "IN_CONF0_CH*": {}
+    "IN_PRI_CH*": {}
+    "IN_LINK_CH*": {}
+    "IN_PERI_SEL_CH*": {}
+    "IN_DSCR_BF0_CH*": {}
+
 DS:
   _modify:
     "Y_MEM*":
