Correct field name for ESP32-C6 LP's `LP_IO::GPIO%s` registers

--- a/esp32c6-lp/svd/patches/esp32c6-lp.yaml
+++ b/esp32c6-lp/svd/patches/esp32c6-lp.yaml
@@ -35,6 +35,9 @@ LP_IO:
 
   GPIO0:
     _strip: "LP_GPIO0_"
+    _modify:
+      MCU_SEL:
+        name: FUN_SEL
   PIN0:
     _strip: "LP_GPIO0_"
 
