Rename `I2S1` interrupt to `I2S0` for ESP32-C6/H2

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -76,6 +76,12 @@ HMAC:
       dimIncrement: 0x4
       size: 0x20
 
+I2S0:
+  _modify:
+    _interrupts:
+      I2S1:
+        name: I2S0
+
 RSA:
   _modify:
     "M_MEM*":
