--- a/esp32s3-ulp/svd/patches/esp32s3-ulp.yaml
+++ b/esp32s3-ulp/svd/patches/esp32s3-ulp.yaml
@@ -1,1 +1,17 @@
 _svd: "../esp32s3-ulp.base.svd"
+
+RTC_CNTL:
+  _modify:
+    RTC_COCPU_CTRL:
+      name: COCPU_CTRL
+
+RTC_IO:
+  _strip: "RTC_GPIO_"
+
+  "*":
+    _strip: "RTC_"
+
+  OUT_W1TC:
+    _strip: "GPIO_"
+  OUT_W1TS:
+    _strip: "GPIO_"
