Patch the `USB_DEVICE` peripheral for ESP32-P4

--- a/esp32p4/svd/patches/esp32p4.yaml
+++ b/esp32p4/svd/patches/esp32p4.yaml
@@ -1,1 +1,10 @@
 _svd: "../esp32p4.base.svd"
+
+USB_DEVICE:
+  "*":
+    _strip: "USB_SERIAL_JTAG_"
+
+  EP1:
+    _modify:
+      RDWR_BYTE:
+        access: read-write
