Fix typo in field name for `TRACE` peripheral on C6/H2

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -111,3 +111,9 @@ SHA:
       dim: 16
       dimIncrement: 0x4
       size: 0x20
+
+TRACE:
+  MEM_START_ADDR:
+    _modify:
+      MEM_STAET_ADDR:
+        name: MEM_START_ADDR
