Patch register important for `ESP32-P4` clock_ll

--- a/esp32p4/svd/patches/esp32p4.yaml
+++ b/esp32p4/svd/patches/esp32p4.yaml
@@ -8,3 +8,9 @@ USB_DEVICE:
     _modify:
       RDWR_BYTE:
         access: read-write
+
+HP_SYS_CLKRST:
+  ROOT_CLK_CTRL0:
+    _modify:
+      REG_SOC_CLK_DIV_UPDATE:
+        access: read-write
