Patch TIMG/UPDATE for ESP32, ESP32-C2

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -1,1 +1,15 @@
 _svd: ../esp32.base.svd
+
+TIMG0:
+  T0UPDATE:
+    _modify:
+      UPDATE:
+        bitOffset: 31
+        bitWidth: 1
+        access: read-write
+  T1UPDATE:
+    _modify:
+      UPDATE:
+        bitOffset: 31
+        bitWidth: 1
+        access: read-write
