--- a/esp32s3/Cargo.toml
+++ b/esp32s3/Cargo.toml
@@ -30,9 +30,9 @@ test = false
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
 vcell = "0.1.3"
-xtensa-lx = "0.8.0"
+xtensa-lx = "0.9.0"
 
 [features]
-default = ["xtensa-lx/esp32s3"]
+default = ["xtensa-lx/spin"]
 rt = []
 impl-register-debug = []
