--- a/esp32c6/Cargo.toml
+++ b/esp32c6/Cargo.toml
@@ -30,8 +30,10 @@ test = false
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
 vcell = "0.1.3"
+defmt = { version = "0.3.6", optional = true }
 
 [features]
 default = []
 rt = []
 impl-register-debug = []
+defmt = ["dep:defmt"]
