--- a/esp32s2/Cargo.toml
+++ b/esp32s2/Cargo.toml
@@ -31,8 +31,10 @@ test = false
 critical-section = { version = "1.1.1", optional = true }
 vcell = "0.1.3"
 xtensa-lx = "0.9.0"
+defmt = { version = "0.3.6", optional = true }
 
 [features]
 default = []
 rt = []
 impl-register-debug = []
+defmt = ["dep:defmt"]
