Align SPI, PARL_IO interrupts (C2,H2,C6)

--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -5,3 +5,9 @@ TIMG0:
     _modify:
       T0_UPDATE:
         name: UPDATE
+
+SPI2:
+  _modify:
+    _interrupts:
+      SPI_INTR_2:
+        name: SPI2
