--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -5,3 +5,11 @@ TIMG0:
     _modify:
       T0_UPDATE:
         name: UPDATE
+
+SPI2:
+  _modify:
+    _interrupts:
+      SPI_INTR_2:
+        name: SPI2
+      SPI_INTR_1:
+        name: SPI1
