--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -1,6 +1,23 @@
 _svd: ../esp32.base.svd
 
+I2C0:
+  _modify:
+    INT_STATUS:
+      name: INT_ST
+
+RTC_I2C:
+  _modify:
+    INT_EN:
+      name: INT_ENA
+
+"EFUSE,I2C0,I2S0,LEDC,MCPWM0,RTC_CNTL,RTC_I2C,UART0,UHCI0":
+  _include: ../../../common_patches/int_strip.yaml
+
+SPI0:
+  _include: ../../../common_patches/spi_dma_int_strip.yaml
+
 TIMG0:
+  _include: ../../../common_patches/tim_int_strip.yaml
   T0UPDATE:
     _modify:
       UPDATE:
