--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -1,10 +1,53 @@
 _svd: ../esp32c2.base.svd
 
+_modify:
+  SPI?:
+    groupName: SPI
+
+I2C0:
+  _modify:
+    INT_STATUS:
+      name: INT_ST
+
+RTC_CNTL:
+  _include: ../../../common_patches/rtc_cntl_int_strip.yaml
+
+"EFUSE,I2C0,LEDC,UART0,APB_SARADC,SPI1,SYSTIMER":
+  _include: ../../../common_patches/int_strip.yaml
+
+APB_CTRL:
+  PERI_BACKUP_INT_RAW:
+    _strip: PERI_BACKUP_
+    _strip_end: _INT_RAW
+  PERI_BACKUP_INT_ST:
+    _strip: PERI_BACKUP_
+    _strip_end: _INT_ST
+  PERI_BACKUP_INT_ENA:
+    _strip: PERI_BACKUP_
+    _strip_end: _INT_ENA
+  PERI_BACKUP_INT_CLR:
+    _strip: PERI_BACKUP_
+    _strip_end: _INT_CLR
+    _modify:
+      "*":
+        modifiedWriteValues: oneToClear
+
+ECC:
+  _include: ../../../common_patches/ecc_int_strip.yaml
+
+EXTMEM:
+  _include: ../../../common_patches/extmem_cache_int_strip.yaml
+
 TIMG0:
+  _include: ../../../common_patches/tim_int_strip.yaml
   T0UPDATE:
     _modify:
       T0_UPDATE:
         name: UPDATE
+  T0HI:
+    _modify:
+      T0_HI:
+        name: HI
 
 SPI2:
   _modify:
@@ -13,6 +56,7 @@ SPI2:
         name: SPI2
       SPI_INTR_1:
         name: SPI1
+  _include: ../../../common_patches/spi_dma_int_strip.yaml
 
 DMA:
   _expand_array:
@@ -42,6 +86,9 @@ DMA:
         name: ENA
       INT_CLR_CH?:
         name: CLR
+        _modify:
+          "*":
+            modifiedWriteValues: oneToClear
     CH%s:
       dimIncrement: 0xC0
       IN_CONF0_CH?:
