--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -1,13 +1,43 @@
 _svd: "../esp32c6.base.svd"
 
+_modify:
+  SPI?:
+    groupName: SPI
+
+I2C0:
+  _modify:
+    INT_STATUS:
+      name: INT_ST
+
 LP_I2C0:
   _strip: "I2C_"
   "*":
     _strip: "I2C_"
+  _modify:
+    INT_STATUS:
+      name: INT_ST
   DATA:
     _modify:
       FIFO_RDATA:
         access: read-write
+
+LP_WDT:
+  _modify:
+    INT_ST_RTC:
+      name: INT_ST
+    INT_ENA_RTC:
+      name: INT_ENA
+    INT_CLR_RTC:
+      name: INT_CLR
+
+PMU:
+  _include: ../../../common_patches/pmu_int_strip.yaml
+
+
+SPI[01]:
+  _strip: SPI_MEM_
+  "*":
+    _strip: SPI_MEM_
 
 PARL_IO:
   INT_ENA:
@@ -30,6 +60,24 @@ PARL_IO:
       RX_FIFO_WFULL_INT_CLR:
         name: RX_FIFO_WOVF_INT_CLR
         description: Write 1 to clear RX_FIFO_WOVF_INTR.
+
+"EFUSE,I2C0,LP_I2C0,I2S0,LEDC,UART0,APB_SARADC,SPI[01],SYSTIMER,UHCI0,USB_DEVICE,LP_UART,LP_WDT,MCPWM0,PARL_IO,PAU,PMU":
+  _include: ../../../common_patches/int_strip.yaml
+
+ECC:
+  _include: ../../../common_patches/ecc_int_strip.yaml
+
+LP_ANA:
+  _include: ../../../common_patches/lpana_int_strip.yaml
+
+LP_TIMER:
+  _include: ../../../common_patches/lptim_int_strip.yaml
+
+TIMG0:
+  _include: ../../../common_patches/tim_int_strip.yaml
+
+SPI2:
+  _include: ../../../common_patches/spi_dma_int_strip.yaml
 
 DMA:
   _modify:
@@ -84,6 +132,9 @@ DMA:
         name: ENA
       IN_INT_CLR_CH?:
         name: CLR
+        _modify:
+          "*":
+            modifiedWriteValues: oneToClear
 
     OUT_INT_CH%s:
       OUT_INT_RAW_CH?:
@@ -94,6 +145,9 @@ DMA:
         name: ENA
       OUT_INT_CLR_CH?:
         name: CLR
+        _modify:
+          "*":
+            modifiedWriteValues: oneToClear
 
     CH%s:
       IN_CONF0_CH?:
