--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -1,6 +1,45 @@
 _svd: "../esp32h2.base.svd"
 
+_modify:
+  SPI?:
+    groupName: SPI
+
+I2C0:
+  _modify:
+    INT_STATUS:
+      name: INT_ST
+
+LP_WDT:
+  _modify:
+    INT_ST_RTC:
+      name: INT_ST
+    INT_ENA_RTC:
+      name: INT_ENA
+    INT_CLR_RTC:
+      name: INT_CLR
+
+SPI[01]:
+  _strip: SPI_MEM_
+  "*":
+    _strip: SPI_MEM_
+
+"EFUSE,I2C0,I2S0,LEDC,UART0,APB_SARADC,SPI[01],SYSTIMER,UHCI0,LP_WDT,MCPWM0,PARL_IO,PAU,GPIO_SD,USB_DEVICE":
+  _include: ../../../common_patches/int_strip.yaml
+
+ECC:
+  _include: ../../../common_patches/ecc_int_strip.yaml
+
+LP_ANA:
+  _include: ../../../common_patches/lpana_int_strip.yaml
+
+PMU:
+  _include: ../../../common_patches/pmu_int_strip.yaml
+
+TIMG0:
+  _include: ../../../common_patches/tim_int_strip.yaml
+
 SPI2:
+  _include: ../../../common_patches/spi_dma_int_strip.yaml
   _modify:
     _interrupts:
       GPSPI2:
@@ -59,6 +98,9 @@ DMA:
         name: ENA
       IN_INT_CLR_CH?:
         name: CLR
+        _modify:
+          "*":
+            modifiedWriteValues: oneToClear
 
     OUT_INT_CH%s:
       OUT_INT_RAW_CH?:
@@ -69,6 +111,9 @@ DMA:
         name: ENA
       OUT_INT_CLR_CH?:
         name: CLR
+        _modify:
+          "*":
+            modifiedWriteValues: oneToClear
 
     CH%s:
       IN_CONF0_CH?:
