--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -1,1 +1,15 @@
 _svd: ../esp32s2.base.svd
+
+I2C0:
+  _modify:
+    INT_STATUS:
+      name: INT_ST
+
+"EFUSE,I2C0,I2S0,LEDC,UART0,APB_SARADC,UHCI0,RTC_I2C":
+  _include: ../../../common_patches/int_strip.yaml
+
+SPI0:
+  _include: ../../../common_patches/spi_dma_int_strip.yaml
+
+TIMG0:
+  _include: ../../../common_patches/tim_int_strip.yaml
